--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-quill": "^2.0.0",
+    "tslib": "^2.8.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.10.0",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
