Update domain configuration to adi-phone.co.il

--- a/netlify.toml
+++ b/netlify.toml
@@ -20,6 +20,10 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
+[functions]
+  node_bundler = "esbuild"
+  external_node_modules = ["@prisma/client", "prisma"]
+
 [[headers]]
   for = "/*"
   [headers.values]
