--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-image-lightbox": "^5.1.4",
     "react-markdown": "^10.1.0",
     "react-quill": "^2.0.0",
     "resend": "^4.6.0",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
